# opengateway

./: .gitignore  Cargo.toml  LICENSE  README.md
.factory/droids/: project-probe.md  worker-probe.md  worker.md
.github/: dependabot.yml
.github/workflows/: acp-smoke.yml  dependency-audit.yml  desktop-artifacts.yml
config/: config.yaml
examples/: factory-config.json
examples/acp/: README.md  TROUBLESHOOTING.md  jetbrains-acp.json  zed-settings.jsonc
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/scripts/: prepare-macos-icon.sh  prepare-sidecar.mjs
gui/src/: App.tsx  runtime.ts  styles.css  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
gui/src-tauri/src/: control.rs  main.rs
gui/src-tauri/windows/: hooks.nsh
src/: auth_store.rs  gui_api.rs  main.rs  oauth.rs  paths.rs  service.rs
src/acp/: bridge.rs  capabilities.rs  cli.rs  doctor.rs  errors.rs  journal.rs  mod.rs  protocol.rs  redact.rs  session.rs  snapshot.rs  supervisor.rs  transport.rs
src/acp/adapters/: claude.rs  codex.rs  mod.rs
